Removed appstore icon

--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,9 @@ your_link: https://dais.live
 your_city: Bengaluru
 email_address: tech.daislive@gmail.com
 facebook_username:
-instagram_username: ebaehr
-twitter_username: ebaehr
-github_username: emilbaehr
+instagram_username:
+twitter_username:
+github_username:
 youtube_username:
 
 # Feature List                            Edit, add or remove features to be presented.
