--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,25 @@
 #page title
-page_title: # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
+page_title: Dais # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
 
 # App Info
 ios_app_id: # Required. Enter iOS app ID to automatically populate name, price and icons (e.g. 718043190).
 
 appstore_link: # Automatically populates if not set and if iOS app ID is set. Otherwise enter manually.
-playstore_link: https://play.google.com/store/apps/details?id=com.eventbeep.android # Enter Google Play Store URL.
+playstore_link: https://play.google.com/store/apps/details?id=live.dais # Enter Google Play Store URL.
 presskit_download_link:
   # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip").
 
-app_icon: assets/appicon.png # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
-app_name: Dais Live # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
+app_icon: assets/icon_rounded.png # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
+app_thumbnail: assets/icon_square.png # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
+app_name: Dais # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price: # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_description: A place to show your talent
+app_description: Discover new interest, Uncover your potential
+app_long_description: Dais is an open channel for online live events, workshops, talk shows & skill series.
 
 enable_smart_app_banner: true # Set to true to show a smart app banner at top of page on mobile devices.
 
 # Information About Yourself
-your_name: Dais Live
+your_name: Dais
 your_link: https://dais.live
 your_city: Bengaluru
 email_address: tech.daislive@gmail.com
@@ -62,15 +64,15 @@ features:
     fontawesome_icon_name: # Enter Font Awesome icon name (e.g. star). Find icons on fontawesome.com/icons.
 
 # Theme Settings
-topbar_color: "#000000"
-topbar_transparency: 0.1
+topbar_color: "#1F88E3"
+topbar_transparency: 0.0
 topbar_title_color: "#ffffff"
 
 cover_image: assets/headerimage.png # Replace with alternative image path or image URL.
-cover_overlay_color: "#363b3d"
+cover_overlay_color: "#1F88E3"
 cover_overlay_transparency: 0.8
 
-device_color: black # Set to: blue, black, yellow, coral or white.
+device_color: blue # Set to: blue, black, yellow, coral or white.
 
 body_background_color: "#ffffff"
 
@@ -79,11 +81,12 @@ link_color: "#1d63ea"
 app_title_color: "#ffffff"
 app_price_color: "#ffffff"
 app_description_color: "#ffffff"
+app_long_description_color: "#ffffff"
 
 feature_title_color: "#000000"
 feature_text_color: "#666666"
 
-feature_icons_foreground_color: "#1d63ea"
+feature_icons_foreground_color: "#FF2984"
 feature_icons_background_color: "#e6e6e6"
 
 social_icons_foreground_color: "#666666"
