Added instagram handle

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ your_link: https://dais.live
 your_city: Bengaluru
 email_address: tech.daislive@gmail.com
 facebook_username:
-instagram_username:
+instagram_username: dais.live
 twitter_username:
 github_username:
 youtube_username:
